[tool.poetry]
name = "encryptedfs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fusepy = "^3.0.1"
cryptography = "^45.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
